fix banner text spacing

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -4,7 +4,6 @@
 #
 --------------------------------------------------------------*/
 /* Webfonts Setup */
-@import url(c:\Users\jiang\Documents\NiCE\website\website\assets\stylesheets\fontawesome-all.min.css);
 @font-face {
   font-family: "RalewayMedium";
   src: url("../webfonts/Raleway-Medium.ttf") format("truetype");
@@ -722,8 +721,8 @@ section[role="banner"] {
           justify-content: space-evenly;
   grid-auto-rows: minmax(10px, auto);
   grid-auto-columns: minmax(10px, auto);
-  -ms-grid-rows: (1fr)[5] (auto)[3] 0.3fr auto 0.5fr;
-      grid-template-rows: repeat(5, 1fr) repeat(3, auto) 0.3fr auto 0.5fr;
+  -ms-grid-rows: (1fr)[5] (auto)[3] 0.5fr auto 0.3fr;
+      grid-template-rows: repeat(5, 1fr) repeat(3, auto) 0.5fr auto 0.3fr;
       grid-template-areas: "." "." "." "." "." "logo" "title" "subtitle" "." "button" ".";
   row-gap: 1px;
 }
@@ -768,6 +767,7 @@ section[role="banner"] {
 
 section[role="banner"] h1 {
   color: var(--palette--white);
+  line-height: 1;
 }
 
 section[role="banner"] p {
